source/raylib.pas


//------------------------------------------------------------------------------------
// TModel 3d Loading and Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

(* Model management functions *)

{Load model from files (meshes and materials)}
function LoadModel(fileName: PChar): TModel; cdecl; external cDllName;
{Load model from generated mesh (default material)}
function LoadModelFromMesh(mesh: TMesh): TModel; cdecl; external cDllName;
{Unload model (including meshes) from memory (RAM and/or VRAM)}
procedure UnloadModel(model: TModel); cdecl; external cDllName;
{Unload model (but not meshes) from memory (RAM and/or VRAM)}
procedure UnloadModelKeepMeshes(model: TModel); cdecl; external cDllName;
{Compute model bounding box limits (considers all meshes)}
function GetModelBoundingBox(model: TModel): TBoundingBox; cdecl; external cDllName;


(* Model drawing functions *)

{Draw a model (with texture if set)}
procedure DrawModel(model: TModel; position: TVector3; scale: Single; tint: TColorB); cdecl; external cDllName;
{Draw a model with extended parameters}
procedure DrawModelEx(model: TModel; position, rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColorB); cdecl; external cDllName;
{Draw a model wires (with texture if set)}
procedure DrawModelWires(model: TModel; position: TVector3; scale: Single; tint: TColorB); cdecl; external cDllName;
{Draw a model wires (with texture if set) with extended parameters}
procedure DrawModelWiresEx(model: TModel; position, rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColorB); cdecl; external cDllName;
{Draw bounding box (wires)}
procedure DrawBoundingBox(box: TBoundingBox; color: TColorB); cdecl; external cDllName;
{Draw a billboard texture}
procedure DrawBillboard(camera: TCamera; texture: TTexture2D; position: TVector3; size: Single; tint: TColorB); cdecl; external cDllName;
{Draw a billboard texture defined by source}
procedure DrawBillboardRec(camera: TCamera; texture: TTexture2D; source: TRectangle; position: TVector3; size: TVector2; tint: TColorB); cdecl; external cDllName;
{Draw a billboard texture defined by source and rotation}
procedure DrawBillboardPro(camera: TCamera; texture: TTexture2D; source: TRectangle; position, up: TVector3; size, origin: TVector2; rotation: Single; tint: TColorB); cdecl; external cDllName;


(* Mesh management functions *)

{Upload mesh vertex data in GPU and provide VAO/VBO ids}
procedure UploadMesh(mesh: PMesh; _dynamic: Boolean); cdecl; external cDllName;
{Update mesh vertex data in GPU for a specific buffer index}
procedure UpdateMeshBuffer(mesh: TMesh; index: Integer; const data: Pointer; dataSize, offset: Integer); cdecl; external cDllName;
{Unload mesh data from CPU and GPU}
procedure UnloadMesh(mesh: TMesh); cdecl; external cDllName;
{Draw a 3d mesh with material and transform}
procedure DrawMesh(mesh: TMesh; material: TMaterial; transform: TMatrix); cdecl; external cDllName;
{Draw multiple mesh instances with material and different transforms}
procedure DrawMeshInstanced(mesh: TMesh; material: TMaterial;const transforms: PMatrix; instances: Integer); cdecl; external cDllName;
{Export mesh data to file, returns true on success}
function ExportMesh(mesh: TMesh; fileName: PChar): Boolean; cdecl; external cDllName;
{Compute mesh bounding box limits}
function GetMeshBoundingBox(mesh: TMesh): TBoundingBox; cdecl; external cDllName;
{Compute mesh tangents}
procedure GenMeshTangents(mesh: PMesh); cdecl; external cDllName;

(* Mesh generation functions *)

{Generate polygonal mesh}
function GenMeshPoly(sides: Integer; radius: Single): TMesh; cdecl; external cDllName;
{Generate plane mesh (with subdivisions)}
function GenMeshPlane(width, length: Single; resX, resZ: Integer): TMesh; cdecl; external cDllName;
{Generate cuboid mesh}
function GenMeshCube(width, height, length: Single): TMesh; cdecl; external cDllName;
{Generate sphere mesh (standard sphere)}
function GenMeshSphere(radius: Single; rings, slices: Integer): TMesh; cdecl; external cDllName;
{Generate half-sphere mesh (no bottom cap)}
function GenMeshHemiSphere(radius: Single; rings, slices: Integer): TMesh; cdecl; external cDllName;
{Generate cylinder mesh}
function GenMeshCylinder(radius, height: Single; slices: Integer): TMesh; cdecl; external cDllName;
{Generate cone/pyramid mesh}
function GenMeshCone(radius, height: Single; slices: Integer): TMesh; cdecl; external cDllName;
{Generate torus mesh}
function GenMeshTorus(radius, size: Single; radSeg, sides: Integer): TMesh; cdecl; external cDllName;
{Generate trefoil knot mesh}
function GenMeshKnot(radius, size: Single; radSeg, sides: Integer): TMesh; cdecl; external cDllName;
{Generate heightmap mesh from image data}
function GenMeshHeightmap(heightmap: TImage; size: TVector3): TMesh; cdecl; external cDllName;
{Generate cubes-based map mesh from image data}
function GenMeshCubicmap(cubicmap: TImage; cubeSize: TVector3): TMesh; cdecl; external cDllName;


(* Material loading/unloading functions *)

{Load materials from model file}
function LoadMaterials(fileName: PChar; materialCount: PInteger): PMaterial; cdecl; external cDllName;
{Load default material (Supports: DIFFUSE, SPECULAR, NORMAL maps)}
function LoadMaterialDefault: TMaterial; cdecl; external cDllName;
{Unload material from GPU memory (VRAM)}
procedure UnloadMaterial(material: TMaterial); cdecl; external cDllName;
{Set texture for a material map type (MATERIAL_MAP_DIFFUSE, MATERIAL_MAP_SPECULAR...)}
procedure SetMaterialTexture(material: PMaterial; mapType: Integer; texture: TTexture2D); cdecl; external cDllName;
{Set material for a mesh}
procedure SetModelMeshMaterial(model: PModel; meshId, materialId: Integer); cdecl; external cDllName;


(* Model animations loading/unloading functions *)

{Load model animations from file}
function LoadModelAnimations(fileName: PChar; animCount: PLongWord): PModelAnimation; cdecl; external cDllName;
{Update model animation pose}
procedure UpdateModelAnimation(model: TModel; anim: TModelAnimation; frame: Integer); cdecl; external cDllName;
{Unload animation data}
procedure UnloadModelAnimation(anim: TModelAnimation); cdecl; external cDllName;
{Unload animation array data}
procedure UnloadModelAnimations(animations: PModelAnimation; count: LongWord); cdecl; external cDllName;
{Check model animation skeleton match}
function IsModelAnimationValid(model: TModel; anim: TModelAnimation): Boolean; cdecl; external cDllName;


(* Collision detection functions *)

{Check collision between two spheres}
function CheckCollisionSpheres(center1: TVector3; radius1: Single; center2: TVector3; radius2: Single): Boolean; cdecl; external cDllName;
{Check collision between two bounding boxes}
function CheckCollisionBoxes(box1, box2: TBoundingBox): Boolean; cdecl; external cDllName;
{Check collision between box and sphere}
function CheckCollisionBoxSphere(box: TBoundingBox; center: TVector3; radius: Single): Boolean; cdecl; external cDllName;
{Get collision info between ray and sphere}
function GetRayCollisionSphere(ray:TRay; center: TVector3; radius: Single): TRayCollision; cdecl; external cDllName;
{Get collision info between ray and box}
function GetRayCollisionBox(ray: TRay; box: TBoundingBox): TRayCollision; cdecl; external cdllName;
{Get collision info between ray and mesh}
function GetRayCollisionMesh(ray: TRay; mesh: TMesh; transform: TMatrix): TRayCollision; cdecl; external cdllName;
{Get collision info between ray and triangle}
function GetRayCollisionTriangle(ray: TRay; p1, p2, p3: TVector3): TRayCollision; cdecl; external cDllName;
{Get collision info between ray and quad}
function GetRayCollisionQuad(ray: TRay; p1, p2, p3, p4: TVector3): TRayCollision; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Audio Loading and Playing Functions (Module: audio)
//------------------------------------------------------------------------------------
type
PAudioCallback = ^TAudioCallback;
TAudioCallback = procedure (bufferData: Pointer; frames: LongWord); cdecl;

(* Audio device management functions *)

{Initialize audio device and context}
procedure InitAudioDevice; cdecl; external cDllName;
{Close the audio device and context}
procedure CloseAudioDevice; cdecl; external cDllName;
{Check if audio device has been initialized successfully}
function IsAudioDeviceReady: Boolean; cdecl; external cDllName;
{Set master volume (listener)}
procedure SetMasterVolume(volume: Single); cdecl; external cDllName;


(* Wave/Sound loading/unloading functions *)

{Load wave data from file}
function LoadWave(fileName: PChar): TWave; cdecl; external cDllName;
{Load wave from memory buffer, fileType refers to extension: i.e. '.wav' }
function LoadWaveFromMemory(fileType: PChar; fileData: Pointer; dataSize: Integer): TWave; cdecl; external cdllName;
{Load sound from file}
function LoadSound(fileName: PChar): TSound; cdecl; external cDllName;
{Load sound from wave data}
function LoadSoundFromWave(wave: TWave): TSound; cdecl; external cDllName;
{Update sound buffer with new data}
procedure UpdateSound(sound: TSound; data: Pointer; sampleCount: Integer); cdecl; external cdllName;
{Unload wave data}
procedure UnloadWave(wave: TWave); cdecl; external cDllName;
{Unload sound}
procedure UnloadSound(sound: TSound); cdecl; external cDllName;
{Export wave data to file, returns true on success}
function ExportWave(wave: TWave; fileName: PChar): Boolean; cdecl; external cDllName;
{Export wave sample data to code (.h), returns true on success}
function ExportWaveAsCode(wave: TWave; fileName: PChar): Boolean; cdecl; external cDllName;


(* Wave/Sound management functions *)

{Play a sound}
procedure PlaySound(sound: TSound); cdecl; external cDllName;
{Stop playing a sound}
procedure StopSound(sound: TSound); cdecl; external cDllName;
{Pause a sound}
procedure PauseSound(sound: TSound); cdecl; external cDllName;
{Resume a paused sound}
procedure ResumeSound(sound: TSound); cdecl; external cDllName;
{Play a sound (using multichannel buffer pool)}
procedure PlaySoundMulti(sound: TSound); cdecl; external cDllName;
{Stop any sound playing (using multichannel buffer pool)}
procedure StopSoundMulti; cdecl; external cDllName;
{Get number of sounds playing in the multichannel}
function GetSoundsPlaying: Integer; cdecl; external cDllName;
{Check if a sound is currently playing}
function IsSoundPlaying(sound: TSound): Boolean; cdecl; external cDllName;
{Set volume for a sound (1.0 is max level)}
procedure SetSoundVolume(sound: TSound; volume: Single); cdecl; external cDllName;
{Set pitch for a sound (1.0 is base level)}
procedure SetSoundPitch(sound: TSound; pitch: Single); cdecl; external cDllName;
{Set pan for a sound (0.5 is center)}
procedure SetSoundPan(sound: TSound; pan: Single); cdecl; external cDllName;
{Copy a wave to a new wave}
function WaveCopy(wave: TWave): TWave; cdecl; external cDllName;
{Crop a wave to defined samples range}
procedure WaveCrop(wave: PWave; initSample, finalSample: Integer); cdecl; external cDllName;
{Convert wave data to desired format}
procedure WaveFormat(wave: PWave; sampleRate, sampleSize, channels: Integer); cdecl; external cDllName;
{Load samples data from wave as a floats array}
function LoadWaveSamples(wave: TWave): PSingle; cdecl; external cDllName;
{Unload samples data loaded with LoadWaveSamples()}
procedure UnloadWaveSamples(samples: PSingle); cdecl; external cDllName;


(* Music management functions *)
